New content, new layout

--- a/index-de.html
+++ b/index-de.html
@@ -16,90 +16,93 @@
 </head>
 <body>
   <div class="cover image-frame" style="background-image: url('img/image-52.jpg');">
-    <p>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></p>
+    <h1>
+      <span class="title">Counselling</span><br/>
+      <span class="separator">&mdash;</span><br/>
+      <!-- <span class="name">Ant Orant<br/>&mdash;<br/></span> -->
+      <span>Psychologische Unterst&uuml;tzung bei Stress, Angst, Depression, Arbeits- und Beziehungsschwierigkeiten, in Krisen oder bei Ver&auml;nderungsprozessen</span><br/><br/>
+      <span>In Berlin oder online; <br/>auf <a href="index.html">Englisch</a> oder Deutsch</span>
+      <br/><span class="separator">&mdash;</span><br/>
+      <span class="name">Ant Orant</span>
+    </h1>
+    <div class="arrow">&darr;</div>
   </div>
-  <img src="img/profile4.jpg" class="profile" />
-  <h1>
-    <span>Psychologische Unterst&uuml;tzung bei Stress, Angst, Depression, Arbeits- und Beziehungsschwierigkeiten, in Krisen oder bei Ver&auml;nderungsprozessen.</span>
-    <span>In Berlin oder online; <br/>auf <a href="index.html">Englisch</a> oder Deutsch.</span>
-  </h1>
-  <hr>
-  <p class="cta">Schreib mir unter <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
-  <hr>
-  <h2>Dabei kann ich dich unterst&uuml;tzen:</h2>
-  <ul>
-    <li>Ein langfristiges Problem durcharbeiten</li>
-    <li>Eine aktuelle Herausforderung besprechen, eine zweite Meinung bekommen</li>
-    <li>Die Menschen um dich herum entlasten</li>
-    <li>Themen besprechen, &uuml;ber die du anderswo nicht gut sprechen kannst</li>
-  </ul>
-  <hr>
-  <h2>Kosten</h2>
-  <p>Ich befinde mich aktuell noch in Ausbildung und baue meine Praxis auf.<br/>
-  Ich m&ouml;chte, dass unsere Arbeit eine bezahlbare Investition in deine psychische Gesundheit ist.</p>
-  <p>Die Kosten gestalte ich einkommensabh&auml;ngig&mdash;ich biete dir an, einen Beitrag festzulegen, der zu deiner finanziellen Situation passt:
-    <ul>
-      <li>f&uuml;r <em>Einzelpersonen</em>: 10&mdash;50€ pro Sitzung</li>
-      <li>f&uuml;r <em>Paare</em>: 20&mdash;80€ pro Sitzung</li>
-      <!-- <li>In a <em>group</em>: 0&mdash;30€ per session</li> -->
+  <main>
+    <ul class="examples">
+      <li><p>Ein langfristiges Problem durcharbeiten</p></li>
+      <li><p>Eine aktuelle Herausforderung besprechen, eine zweite Meinung bekommen</p></li>
+      <li><p>Die Menschen um dich herum entlasten</p></li>
+      <li><p>Themen besprechen, &uuml;ber die du anderswo nicht gut sprechen kannst</p></li>
     </ul>
-  </p>
-  <hr>
-  <p class="cta">Unser erstes Gespr&auml;ch ist kostenlos. Schreib an <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
-  
-  <hr>
-  <div class="image-frame" style="background-image: url('img/image-49.jpg'); background-position: center;"></div>
-  <h2 id="approach">Mein Ansatz</h2>
-  <p>Unser Arbeit beginnt immer bei dir, genau da, wo du gerade am Tag stehst. Ich biete dir einen gesch&uuml;tzten und nicht-wertenden Raum zum Zuh&ouml;ren und Nachdenken, um dein pers&ouml;nliches Erleben mit Demut, Geduld und Neugier zu erkunden. Im Mittelpunkt stehen Gedanken, Gef&uuml;hle und Verhaltensweisen, und wie sie mit Situationen und Beziehungen in der Außenwelt zusammenh&auml;ngen.</p>
-  <p>Beratung kannst du als kurzfristige Ressource nutzen, um mit akutem Stress oder &uuml;berw&auml;ltigenden Gef&uuml;hlen umzugehen. Regelm&auml;ßige Sitzungen k&ouml;nnen dir dabei helfen, Widerstandskraft aufzubauen und eine engere Verbindung zu deinem inneren Erleben zu entwickeln – was transformierend auf dein Wohlbefinden, deine kreative Arbeit und deine Beziehungen wirken kann. Im Laufe der Zeit kann sich ein Bewusstsein f&uuml;r tiefere oder feinere Muster entwickeln und zu grundlegenden Einsichten &uuml;ber dich selbst f&uuml;hren.</p>
-  <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
-  </div>
+    <hr>
+    <img src="img/profile4.jpg" class="profile" />
+    <p class="cta">Schreib mir unter <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+    <hr>
+    <p>Unser Arbeit beginnt immer bei dir, genau da, wo du gerade am Tag stehst. Ich biete dir einen gesch&uuml;tzten und nicht-wertenden Raum zum Zuh&ouml;ren und Nachdenken, um dein pers&ouml;nliches Erleben mit Demut, Geduld und Neugier zu erkunden. Im Mittelpunkt stehen Gedanken, Gef&uuml;hle und Verhaltensweisen, und wie sie mit Situationen und Beziehungen in der Außenwelt zusammenh&auml;ngen.</p>
+    <p>Beratung kannst du als kurzfristige Ressource nutzen, um mit akutem Stress oder &uuml;berw&auml;ltigenden Gef&uuml;hlen umzugehen. Regelm&auml;ßige Sitzungen k&ouml;nnen dir dabei helfen, Widerstandskraft aufzubauen und eine engere Verbindung zu deinem inneren Erleben zu entwickeln – was transformierend auf dein Wohlbefinden, deine kreative Arbeit und deine Beziehungen wirken kann. Im Laufe der Zeit kann sich ein Bewusstsein f&uuml;r tiefere oder feinere Muster entwickeln und zu grundlegenden Einsichten &uuml;ber dich selbst f&uuml;hren.</p>
+    <div class="image-frame" style="background-image: url('img/image-49.jpg'); background-position: center;"></div>
+    <h2>Kosten</h2>
+    <p>Ich befinde mich aktuell noch in Ausbildung und baue meine Praxis auf.<br/>
+    Ich m&ouml;chte, dass unsere Arbeit eine bezahlbare Investition in deine psychische Gesundheit ist.</p>
+    <p>Die Kosten gestalte ich einkommensabh&auml;ngig&mdash;ich biete dir an, einen Beitrag festzulegen, der zu deiner finanziellen Situation passt:
+      <ul>
+        <li>f&uuml;r <em>Einzelpersonen</em>: 10&mdash;50€ pro Sitzung</li>
+        <li>f&uuml;r <em>Paare</em>: 20&mdash;80€ pro Sitzung</li>
+        <!-- <li>In a <em>group</em>: 0&mdash;30€ per session</li> -->
+      </ul>
+    </p>
+    <hr>
+    <p class="cta">Unser erstes Gespr&auml;ch ist kostenlos. Schreib an <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+
+    <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
+    </div>
+      
+<!--     <h2 id="about">&uuml;ber mich</h2>
+    <p>Ich habe einen beruflichen Hintergrund im Bereich Design, Technologie und Musik, wo ich als Teamleiter, Mentor und Lehrer t&auml;tig war. Designarbeit bedeutet im Wesentlichen, Fragen zu stellen und M&ouml;glichkeiten zu erkunden. Am meisten habe ich dabei die Arbeit mit Menschen gesch&auml;tzt, sei es, Kunden zu helfen, ihre Vision zu formulieren, oder Kolleg:innen zu unterst&uuml;tzen, mit Stress und Unsicherheiten umzugehen. Diese Erfahrungen haben mich zur Besch&auml;ftigung mit Psychologie, Philosophie und Selbstentwicklung inspiriert. Ich begann, mich mit meinen Tr&auml;ume zu besch&auml;ftigen, was mich zur Arbeit von C.G. Jung f&uuml;hrte und zu einem Interesse an Psychoanalyse und Tiefenpsychologie im Allgemeinen.</p> -->
+    <h2 id="training">Aus- &amp; Weiterbildung</h2>
+    <table>
+      <tr>
+        <td>2024-2025</td>
+        <td>
+          MA Counselling<br/>
+          <em>Theologische Hochschule Friedensau, DE</em>
+        </td>
+      </tr>
+      <tr>
+        <td>2024</td>
+        <td>
+          Winter Intensive Study Program, Analytical Psychology<br/>
+          <em>C.G. Jung-Institut, Z&uuml;rich, CH</em>
+        </td>
+      </tr>
+      <tr>
+        <td>2024</td>
+        <td>
+          Introductory Lecture Series, Psychoanalysis<br/>
+          <em>Institute of Psychoanalysis, London, UK</em>
+      </td>
+      </tr>
+      <tr>
+        <td>2004-2007</td>
+        <td>
+          BA(Hons), Fine Art<br/>
+          <em>Leeds Metropolitan University, UK</em>
+        </td>
+      </tr>
+    </table>
+    <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
     
-  <h2 id="about">&uuml;ber mich</h2>
-  <p>Ich habe einen beruflichen Hintergrund im Bereich Design, Technologie und Musik, wo ich als Teamleiter, Mentor und Lehrer t&auml;tig war. Designarbeit bedeutet im Wesentlichen, Fragen zu stellen und M&ouml;glichkeiten zu erkunden. Am meisten habe ich dabei die Arbeit mit Menschen gesch&auml;tzt, sei es, Kunden zu helfen, ihre Vision zu formulieren, oder Kolleg:innen zu unterst&uuml;tzen, mit Stress und Unsicherheiten umzugehen. Diese Erfahrungen haben mich zur Besch&auml;ftigung mit Psychologie, Philosophie und Selbstentwicklung inspiriert. Ich begann, mich mit meinen Tr&auml;ume zu besch&auml;ftigen, was mich zur Arbeit von C.G. Jung f&uuml;hrte und zu einem Interesse an Psychoanalyse und Tiefenpsychologie im Allgemeinen.</p>
-  <h2 id="training">Aus- &amp; Weiterbildung</h2>
-  <table>
-    <tr>
-      <td>2024-2025</td>
-      <td>
-        MA Counselling<br/>
-        <em>Theologische Hochschule Friedensau, DE</em>
-      </td>
-    </tr>
-    <tr>
-      <td>2024</td>
-      <td>
-        Winter Intensive Study Program, Analytical Psychology<br/>
-        <em>C.G. Jung-Institut, Z&uuml;rich, CH</em>
-      </td>
-    </tr>
-    <tr>
-      <td>2024</td>
-      <td>
-        Introductory Lecture Series, Psychoanalysis<br/>
-        <em>Institute of Psychoanalysis, London, UK</em>
-    </td>
-    </tr>
-    <tr>
-      <td>2004-2007</td>
-      <td>
-        BA(Hons), Fine Art<br/>
-        <em>Leeds Metropolitan University, UK</em>
-      </td>
-    </tr>
-  </table>
-  <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
-  
-  <h2>Das solltest du wissen</h2>
-  <p>W&auml;hrend meiner Ausbildung arbeite ich unter Supervision.<br/>
-    <small>(Die Arbeit wird besprochen, anonymisiert, mit erfahrenen Mentoren)</small></p>
-  <p>Wenn du dich in einer akuten Krise befindest oder jemand anders in Gefahr ist, kontaktiere bitte eine der folgenden Stellen:
-    <ul>
-      <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a> (Berlin)<br/></li>
-      <li><a href="https://www.samaritans.org/">Samaritans</a> (UK)<br/></li>
-    </ul>
-  </p>
-  <hr>
+    <h2>Das solltest du wissen</h2>
+    <p>W&auml;hrend meiner Ausbildung arbeite ich unter Supervision.<br/>
+      <small>&ldquo;Supervision&rdquo; bedeutet: Die Arbeit wird besprochen, anonymisiert, mit erfahrenen Mentoren.</small></p>
+    <p>Wenn du dich in einer akuten Krise befindest oder jemand anders in Gefahr ist, kontaktiere bitte eine der folgenden Stellen:
+      <ul>
+        <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a> (Berlin)<br/></li>
+        <li><a href="https://www.samaritans.org/">Samaritans</a> (UK)<br/></li>
+      </ul>
+    </p>
+    <hr>
+  </main>
   <footer>&copy; Ant Orant 2025 &mdash; ant@orant.xyz</footer>
 </body>
 </html>
