--- a/index.html
+++ b/index.html
@@ -16,91 +16,100 @@
 </head>
 <body>
   <div class="cover image-frame" style="background-image: url('img/image-52.jpg');">
-    <p>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></p>
+    <h1>
+      <span class="title">Counselling</span><br/>
+      <span class="separator">&mdash;</span><br/>
+      <!-- <span class="name">Ant Orant<br/>&mdash;<br/></span> -->
+      <span>Mental health support for people experiencing stress, anxiety, depression, work and relationship difficulties, crisis or transition</span><br/><br/>
+      <span>In Berlin or online, in English or <a href="index-de.html">German</a></span>
+      <br/><span class="separator">&mdash;</span><br/>
+      <span class="name">Ant Orant</span>
+    </h1>
+    <div class="arrow">&darr;</div>
   </div>
-  <img src="img/profile4.jpg" class="profile" />
-  <h1>
-    <span>Mental health support for people experiencing stress, anxiety, depression, work and relationship difficulties, crisis or transition.</span>
-    <span>In Berlin or online; <br/>in English or <a href="index-de.html">German</a>.</span>
-  </h1>
-  <hr>
-  <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
-  <hr>
-  <h2>How counselling can help:</h2>
-  <ul>
-    <li>Work through a long-term problem</li>
-    <li>Talk through a recent experience, get a second opinion</li>
-    <li>Take some pressure off the people around you</li>
-    <li>Discuss something you can’t speak about anywhere else</li>
-  </ul>
-  <hr>
-  <h2>Fees</h2>
-  <p>I’m in-training as a counsellor and building a practice.<br/>
-  I want our work to be an affordable investment in your mental health.</p>
-  <p>Fees are income-based&mdash;I invite you to set a fee that fits to your financial situation:
-    <ul>
-      <li>for <em>individuals</em>: 10&mdash;50€ per session</li>
-      <li>for <em>couples</em>: 20&mdash;80€ per session</li>
-      <!-- <li>In a <em>group</em>: 0&mdash;30€ per session</li> -->
+  <main>
+    <!-- <p class="align-center">
+      Work through a long-term problem<br/><br/>
+      Talk through a recent experience, get a second opinion<br/><br/>
+      Take some pressure off the people around you<br/><br/>
+      Discuss something you can’t speak about anywhere else<br/><br/>
+    </p> -->
+     <ul class="examples">
+      <li><p>Work through a long-term problem</p></li>
+      <li><p>Talk through a recent experience, get a second opinion</p></li>
+      <li><p>Take some pressure off the people around you</p></li>
+      <li><p>Discuss something you can’t speak about anywhere else</p></li>
     </ul>
-  </p>
-  <hr>
-  <p class="cta">Our first conversation is free. Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
-  
-  <hr>
-  <div class="image-frame" style="background-image: url('img/image-49.jpg'); background-position: center;"></div>
-  <h2 id="approach">My approach</h2>
-  <p>Our work always begins with you, however you are on the day. I provide a confidential and non-judgmental space for listening and reflection, for exploring your subjective experience with an attitude of humility, patience and curiosity. Our primary material is thoughts, feelings and behaviours, and how they relate to situations and relationships in the outside world.</p>
-  <p>You can use counselling as a short-term, on-demand resource for coping with acute stress or overwhelming feelings. Regular work can help you to develop resilience and a closer attunement to inner life, with potentially transformative effects on your sense of well-being, your creative work, and your relationships. Over time, the work can foster an awareness of deeper or more subtle patterns, and lead to more profound insights about oneself.</p>
+    <hr>
+    <img src="img/profile4.jpg" class="profile" />
+    <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+    <hr>
+    <p>Our work always begins with you, however you are on the day. I provide a confidential and non-judgmental space for listening and reflection, for exploring your subjective experience with an attitude of humility, patience and curiosity. Our primary material is thoughts, feelings and behaviours, and how they relate to situations and relationships in the outside world.</p>
+    <p>You can use counselling as a short-term, on-demand resource for coping with acute stress or overwhelming feelings. Regular work can help you to develop resilience and a closer attunement to inner life, with potentially transformative effects on your sense of well-being, your creative work, and your relationships. Over time, the work can foster an awareness of deeper or more subtle patterns, and lead to more profound insights about oneself.</p>
+    <div class="image-frame" style="background-image: url('img/image-49.jpg'); background-position: center;"></div>
+    <h2>Fees</h2>
+    <p>I’m in-training as a counsellor and building a practice.<br/>
+    I want our work to be an affordable investment in your mental health.</p>
+    <p>Fees are income-based&mdash;I invite you to set a fee that fits to your financial situation:
+      <ul>
+        <li>for <em>individuals</em>: 10&mdash;50€ per session</li>
+        <li>for <em>couples</em>: 20&mdash;80€ per session</li>
+        <!-- <li>In a <em>group</em>: 0&mdash;30€ per session</li> -->
+      </ul>
+    </p>
+    <hr>
+    <p class="cta">Our first conversation is free. Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
 
-  <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
-  </div>
+
+    <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
+    </div>
+      
+    <!--<h2 id="about">About me</h2>
+    <p>My background is in design, technology and music, working as a team lead, mentor and teacher. Design work is essentially about asking questions and exploring possibilities. I always found my work with people to be the most rewarding, whether helping clients to articulate a vision, or helping colleagues to manage stress and uncertainty. My work led me to psychology, philosophy and personal development. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>-->
+    <h2 id="training">Training &amp; Education</h2>
+    <table>
+      <tr>
+        <td>2024-2025</td>
+        <td>
+          MA Counselling<br/>
+          <em>Theologische Hochschule Friedensau, DE</em>
+        </td>
+      </tr>
+      <tr>
+        <td>2024</td>
+        <td>
+          Winter Intensive Study Program, Analytical Psychology<br/>
+          <em>C.G. Jung-Institut, Z&uuml;rich, CH</em>
+        </td>
+      </tr>
+      <tr>
+        <td>2024</td>
+        <td>
+          Introductory Lecture Series, Psychoanalysis<br/>
+          <em>Institute of Psychoanalysis, London, UK</em>
+      </td>
+      </tr>
+      <tr>
+        <td>2004-2007</td>
+        <td>
+          BA(Hons), Fine Art<br/>
+          <em>Leeds Metropolitan University, UK</em>
+        </td>
+      </tr>
+    </table>
+    <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
     
-  <h2 id="about">About me</h2>
-  <p>My background is in design, technology and music, working as a team lead, mentor and teacher. Design work is essentially about asking questions and exploring possibilities. I always found my work with people to be the most rewarding, whether helping clients to articulate a vision, or helping colleagues to manage stress and uncertainty. My work led me to psychology, philosophy and personal development. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
-  <h2 id="training">Training &amp; Education</h2>
-  <table>
-    <tr>
-      <td>2024-2025</td>
-      <td>
-        MA Counselling<br/>
-        <em>Theologische Hochschule Friedensau, DE</em>
-      </td>
-    </tr>
-    <tr>
-      <td>2024</td>
-      <td>
-        Winter Intensive Study Program, Analytical Psychology<br/>
-        <em>C.G. Jung-Institut, Z&uuml;rich, CH</em>
-      </td>
-    </tr>
-    <tr>
-      <td>2024</td>
-      <td>
-        Introductory Lecture Series, Psychoanalysis<br/>
-        <em>Institute of Psychoanalysis, London, UK</em>
-    </td>
-    </tr>
-    <tr>
-      <td>2004-2007</td>
-      <td>
-        BA(Hons), Fine Art<br/>
-        <em>Leeds Metropolitan University, UK</em>
-      </td>
-    </tr>
-  </table>
-  <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
-  
-  <h2>Safety</h2>
-    <p>While in training I work under supervision.<br/>
-      <small>(I discuss the work, anonymised, with experienced mentors)</small></p>
-    <p>If you are in an acute crisis, or someone is in danger, please contact one of the following:
-    <ul>
-      <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a> (Berlin)<br/></li>
-      <li><a href="https://www.samaritans.org/">Samaritans</a> (UK)<br/></li>
-    </ul>
-  </p>
-  <hr>
+    <h2>Safety</h2>
+      <p>While in training I work under supervision.<br/>
+        <small>&ldquo;Supervision&rdquo; means: I discuss the work, anonymised, with experienced mentors.</small></p>
+      <p>If you are in an acute crisis, or someone is in danger, please contact one of the following:
+      <ul>
+        <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a> (Berlin)<br/></li>
+        <li><a href="https://www.samaritans.org/">Samaritans</a> (UK)<br/></li>
+      </ul>
+    </p>
+    <hr>
+  </main>
   <footer>&copy; Ant Orant 2025 &mdash; ant@orant.xyz</footer>
 </body>
 </html>
