--- a/index-de.html
+++ b/index-de.html
@@ -8,7 +8,7 @@
 
   <meta name="viewport" content="width=device-width">
   <link rel="shortcut icon" href="favicon.png"/>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css?v=2">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
