Fix bullet points

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       Discuss something you can’t speak about anywhere else<br/><br/>
     </p> -->
      <ul class="examples">
-      <li><p>Work through a long-term problem</p></li>
-      <li><p>Talk through a recent experience, get a second opinion</p></li>
-      <li><p>Take some pressure off the people around you</p></li>
-      <li><p>Discuss something you can’t speak about anywhere else</p></li>
+      <li>Work through a long-term problem</li>
+      <li>Talk through a recent experience, get a second opinion</li>
+      <li>Take some pressure off the people around you</li>
+      <li>Discuss something you can’t speak about anywhere else</li>
     </ul>
     <hr>
     <img src="img/profile4.jpg" class="profile" />
