Fix bullet points

--- a/index-de.html
+++ b/index-de.html
@@ -29,10 +29,10 @@
   </div>
   <main>
     <ul class="examples">
-      <li><p>Ein langfristiges Problem durcharbeiten</p></li>
-      <li><p>Eine aktuelle Herausforderung besprechen, eine zweite Meinung bekommen</p></li>
-      <li><p>Die Menschen um dich herum entlasten</p></li>
-      <li><p>Themen besprechen, &uuml;ber die du anderswo nicht gut sprechen kannst</p></li>
+      <li>Ein langfristiges Problem durcharbeiten</li>
+      <li>Eine aktuelle Herausforderung besprechen, eine zweite Meinung bekommen</li>
+      <li>Die Menschen um dich herum entlasten</li>
+      <li>Themen besprechen, &uuml;ber die du anderswo nicht gut sprechen kannst</li>
     </ul>
     <hr>
     <img src="img/profile4.jpg" class="profile" />
