--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     I want our work to be an affordable investment in your mental health.</p>
     <p>Fees are income-based&mdash;I invite you to set a fee that fits to your financial situation:
       <ul>
-        <li>for <em>individuals</em>: 10&mdash;50€ per session</li>
-        <li>for <em>couples</em>: 20&mdash;80€ per session</li>
+        <li>for <em>individuals</em>: 10&ndash;50€ per session</li>
+        <li>for <em>couples</em>: 20&ndash;80€ per session</li>
         <!-- <li>In a <em>group</em>: 0&mdash;30€ per session</li> -->
       </ul>
     </p>
