--- a/contract/index3.html
+++ b/contract/index3.html
@@ -13,25 +13,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,500;0,700;1,500;1,700&family=Cormorant+Unicase:wght@700&display=swap" rel="stylesheet">
-
+  <script type="text/javascript" src="https://form.jotform.com/jsform/252955360847063"></script>
 </head>
 <body>
   
-    <iframe
-      id="JotFormIFrame-252955360847063"
-      title="Counselling Contract — Ant Orant"
-      onload="window.parent.scrollTo(0,0)"
-      allowtransparency="true"
-      allow="geolocation; microphone; camera; fullscreen; payment"
-      src="https://form.jotform.com/252955360847063"
-      frameborder="0"
-      style="min-width:100%;max-width:100%;height:539px;border:none;"
-      scrolling="yes"
-    >
-    </iframe>
-    <script src='https://cdn.jotfor.ms/s/umd/latest/for-form-embed-handler.js'></script>
-    <script>window.jotformEmbedHandler("iframe[id='JotFormIFrame-252955360847063']", "https://form.jotform.com/")</script>
-    
 </body>
 </html>
 
